# gestor-hr-v2

./: .env.example  .gitignore  .pre-commit-config.yaml  CLEAN_STATUS.md  FINAL_CLEAN_REPORT.md  IMPLEMENTATION_STATUS.md  README.md  RESOLUCION_ERRORES_TIPOS.md  RUFF_TESTS_SUMMARY.md  SERVIDORES_INICIADOS.md  SISTEMA_LIMPIO_ESTADO.md  STATUS.md  WARNINGS_CORREGIDOS.md  alembic.ini  check_db.py  check_enum_estados.py  check_habitaciones_estado.py  check_servers.py  check_users.py  crear_datos_basicos.py  crear_datos_completos_prueba.py  crear_usuario_prueba.py  create_admin.py  create_admin_user.py  create_habitaciones_table.py  create_sample_habitaciones.py  create_test_user.py  frontend_server.py  init_database.py  init_db.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  reset_habitaciones.py  ruff.toml  ruff_tools.py  (+23 more)
alembic/: env.py
alembic/versions/: 1524cd005e2c_add_full_name_to_users_table.py  414d25e789d9_agregar_tablas_de_habitaciones_.py  4782271afe07_add_habitaciones_table.py  7848d470c270_agregar_campo_servicio_lavanderia_a_.py  aef86e3a39de_crear_tablas_iniciales.py
app/: __init__.py  database.py  main.py
app/api/: __init__.py  api.py  deps.py
app/api/endpoints/: __init__.py  auth.py  habitaciones.py  hospedaje.py  productos.py  reportes.py  reportes_clean.py  tarifas.py  users.py  usuarios.py
app/core/: __init__.py  config.py  deps.py  logging.py  security.py
app/crud/: __init__.py  crud_habitacion.py  crud_hospedaje.py  crud_producto.py  crud_tarifa.py  crud_usuario.py
app/db/: __init__.py  base_class.py  database.py  session.py
app/models/: __init__.py  habitacion.py  hospedaje.py  huesped.py  pedido.py  producto.py  tarifa.py  user.py  usuario.py
app/schemas/: __init__.py  auth.py  habitacion.py  hospedaje.py  huesped.py  producto.py  tarifa.py  user.py  usuario.py
app/services/: __init__.py  base.py  habitacion.py  hospedaje.py  huesped.py  user.py
docs/: ALEMBIC_GUIA.md  BUN_MODERNIZACION.md  TESTING_GUIA.md
frontend/: api.js  auth.js  config-new.js  config.js  index.html  main-new.js  main.js  main_old.js  reportes.js  session.js  styles.css  styles_backup.css  styles_optimizado.css  test-graficos.html  ui.js
frontend/legacy_backup/: auth_old.js  main_old.js
playwright-report/: index.html
test_venv_temp/: pyvenv.cfg
test_venv_temp/Scripts/: activate  activate.bat
tests/: __init__.py  conftest.py  test_main.py
tests/e2e/: debug_login.py  debug_test.py  test_auth_protected_endpoints.py  test_check_in.py  test_checkin_flow.spec.ts  test_dashboard_bi.spec.ts  test_dashboard_graficos.spec.ts  test_debug_basico.spec.js  test_debug_pago.spec.js  test_estabilidad_nueva_estructura.spec.js  test_flujo_checkin.spec.ts  test_flujo_checkin_pago.spec.ts  test_flujo_completo.spec.ts  test_flujo_completo_v3.spec.js  test_graficos_simple.spec.ts  test_login.py  test_registration.py
