[tool.pytest.ini_options]
# Le dice a pytest que busque módulos desde la carpeta raíz
pythonpath = "."

[tool.mypy]
# Configuración más permisiva para desarrollo inicial
strict = false
ignore_missing_imports = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
# Plugin de SQLAlchemy temporalmente deshabilitado hasta configurar la BD
# plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.ruff]
# Compatible con el formateador Black
line-length = 88

[project]
name = "gestor-hr-v2"
version = "0.1.0"
description = "Sistema de gestión hotelera con FastAPI y SQLAlchemy"
authors = ["Tu Nombre <tu@email.com>"]
dependencies = [
    "fastapi[all]",
    "sqlalchemy",
    "psycopg2-binary",
    "ruff",
    "pytest",
    "mypy",
    "pre-commit",
    "pytest-watch"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
